# open-specification-python

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Makefile  OPENSPEC.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bootstrap.yml  bug-fix.yml  compound-learning.yml  config.yml  edit-spec.yml  implementation.yml
.github/workflows/: pre-commit.yml  release.yml  update-openspec.yml
docs/: self-healing.md
docs/learnings/by-issue/: 005-bootstrap-labels.md
docs/template-spec/: ARCHITECTURE.md  PRODUCT.md  README.md  ROADMAP.md  SPECIFICATION.md
docs/templates/: plan.md  proposal.md  retro.md
scripts/: check_loguru_fstrings.py  rename_project.sh  verify.sh
spec/: ARCHITECTURE.md  PRODUCT.md  README.md  ROADMAP.md  SPECIFICATION.md
src/my_project/: __init__.py  config.py  main.py
src/my_project/models/: example.py
src/openspec_python_template/: __init__.py  config.py  main.py
tests/: conftest.py
tests/unit/: test_config.py  test_example.py  test_main.py
