[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openspec_python_template"]

[project]
name = "openspec-python-template"
version = "0.1.0"
description = "Template for open spec projects in python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
]

[project.scripts]
# openspec-python-template = "openspec_python_template.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear (catches mutable defaults, etc.)
    "T20",  # flake8-print (bans print statements in src/)
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "D"]
"scripts/**" = ["T20", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pydoclint]
style = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system)",
]
